# backup_1c

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml
backup_1c/: __init__.py  backup.py  db_utils.py  main.py  models.py  utils.py  yadisk_utils.py
backup_1c/config/: config.py  database.py  logging_config.py
backup_1c/configs/: __init__.py  config.py  database.py  logging_config.py
migrations/: env.py
migrations/versions/: 0bdf6da10cae_add_model_file.py  16928e83ca53_add_is_deleted_to_file.py  180512ae7fdd_create_tables.py  1d76791f3083_add_is_deleted_to_file.py  2dfbd76f140d_add_file_default.py  917e73385e96_add_autoincrement.py  9c56daeef945_test_migration.py  9e50c8bcc2e5_change_db_name.py  de451c7b3b78_update_databasecreds_models.py  dfe48478627f_add_database_creds_table.py  fcf1ccbb8e9c_add_download_link_to_file.py
tests/: test_backup.py  test_config.py  test_database.py  test_db_utils.py  test_main.py  test_utils.py
